fixed component for padding on mobile

--- a/assets/_sass/spotlights/components/_spotlights-components.scss
+++ b/assets/_sass/spotlights/components/_spotlights-components.scss
@@ -171,16 +171,23 @@
 ===========================*/
 
 .sc-dialogue {
-  padding: 0 10rem;
+  padding: 0 2rem;
   text-align: left;
 
+  @include breakpoint('medium') {
+    padding: 0 5rem;
+  }
+  
   cite {
     @extend %post-content__caption-label;
+    margin: 0;
+    padding: 0;
     color: $color__black;
     text-transform: uppercase;
 
     &::before {
       content: '';
+      display: none;
     }
   }
 
